Fixed blur on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ html, body {
   	width: 100vw;
 	font-family: 'Orbitron', sans-serif !important;
     font-size: 62.5%;
-	color: #000000 !important;
+	color: #000 !important;
 }
 
 body {
@@ -110,8 +110,8 @@ h1 {
 
 @media only screen and (max-device-width: 768px){
     #imgBlur{
-        -webkit-filter: blur(100);
-        filter: blur(100);
+        -webkit-filter: blur(5px);
+        filter: blur(5px);
         -webkit-opacity: 0.6;
         opacity: 0.6;
     }
